[package]
name = "fantoccini"
version = "0.12.0-alpha.4"
edition = "2018"

description = "High-level API for programmatically interacting with web pages through WebDriver."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/fantoccini"
homepage = "https://github.com/jonhoo/fantoccini"
repository = "https://github.com/jonhoo/fantoccini.git"

keywords = ["webdriver", "chromedriver", "geckodriver", "phantomjs", "automation"]
categories = ["api-bindings", "development-tools::testing", "web-programming::http-client"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/fantoccini" }
maintenance = { status = "looking-for-maintainer" }

[dependencies]
webdriver = "^0.40"
url = "2.0.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.0"
tokio = "0.2.0"
hyper = { version = "0.13.0" }
hyper-tls = "0.4.0"
cookie = { version = "0.12", features = ["percent-encode"] }
base64 = "0.10"
mime = "0.3.9"
http = "0.2"
bytes = "0.5"

[dev-dependencies]
serial_test = "0.2"
serial_test_derive = "0.2"
tokio = { version = "0.2", features = ["rt-util"]}
